@@ -1,3 +1,15 @@
+Wed Jan 25 02:53:07 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>
+
+        * DAnCE/ExecutionManager/Execution_Manager_Impl.cpp
+        * DAnCE/ExecutionManager/Execution_Manager_Impl.h
+        * DAnCE/Plan_Launcher/Plan_Launcher_Impl.cpp
+        * DAnCE/Plan_Launcher/Plan_Launcher_Impl.h
+        * ciao/Deployment.idl
+        
+          Fixed a bug about destroying *ApplicationManagers. 
+          This fix will ensure that DAM won't be destroyed if any
+          components managed by itself are still up and running.
+
 Wed Jan 25 01:41:53 UTC 2006  Gan Deng  <gan.deng@vanderbilt.edu>
 
         * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp
